Fixed "more" button height on mobile

--- a/base.css
+++ b/base.css
@@ -65,6 +65,7 @@ DESIGNED BY /U/HEWITT. VISIT US AT HTTPS://VOAT.CO/V/SCRIBBLE
 	}
 	#sr-more-link {
 		top: 0;
+		height: 24px;
 	}
 	#sr-more-link:hover {
 		background: #125A67;
